examples/bad/static_error_invalid_number_of_arguments.ps
int f(int a, int b, int c) {
    int x;
    return x;
}

int x, y, z;
f(x, y);